--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vant": "^1.6.12",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
