--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.7.2",
+    "swiper": "^4.5.0",
     "vant": "^1.6.12",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-router": "^3.0.1",
+    "vue-video": "^0.1.7",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
