--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "vant": "^1.6.12",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.0.1",
     "vue-video": "^0.1.7",
+    "vue-directive-image-previewer": "^2.2.1",
     "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
@@ -23,8 +25,8 @@
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-plugin-component": "^1.1.1",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
