--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.7.2",
     "swiper": "^4.5.0",
-    "vant": "^1.6.12",
+    "vant": ">=2.1.8",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-preview": "^1.1.3",
