--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.7.2",
-    "swiper": "^4.5.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vant": ">=2.1.8",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-directive-image-previewer": "^2.2.1",
     "vue-preview": "^1.1.3",
     "vue-router": "^3.0.1",
     "vue-video": "^0.1.7",
-    "vue-directive-image-previewer": "^2.2.1",
     "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
@@ -29,8 +30,6 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
